--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: nerazull
-description: At this time, for SEO purposes
+description: Dragos Boston
+At this time, for SEO purposes
