--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-minimal
 title: nerazull
-description: Dragos Boston
-At this time, for SEO purposes
+description: Dragos Boston — GitHub profile, software projects, and personal site
