--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: nerazull
+title: Dragos Boston
 description: Dragos Boston — GitHub profile, software projects, and personal site
